fix: change hero z-index

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,7 @@ body {
 }
 
 .spin {
+  z-index: 9;
   animation-name: spin;
   animation-duration: 7s;
   animation-direction: linear;
